--- a/.github/workflows/push-docker.yaml
+++ b/.github/workflows/push-docker.yaml
@@ -54,9 +54,9 @@ jobs:
 
   # node-tests:
   #   needs: build-docker
-  #   uses: okx/Xagon-node/.github/workflows/test-from-prover.yml@develop
+  #   uses: okx/Xgon-node/.github/workflows/test-from-prover.yml@develop
   #   with:
-  #     prover_image: okx/Xagon-prover:${{needs.build-docker.outputs.image_tag}}"
+  #     prover_image: okx/Xgon-prover:${{needs.build-docker.outputs.image_tag}}"
   #   secrets:
   #     DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
   #     DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
