--- a/Dockerfile-GHA
+++ b/Dockerfile-GHA
@@ -17,7 +17,7 @@ COPY ./src ./src
 COPY ./test ./test
 COPY ./tools ./tools
 COPY Makefile .
-RUN make -j
+RUN make gpu -j
 
 
 FROM ubuntu:22.04 as executor
@@ -38,7 +38,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt update && \
     libgrpc++-dev libprotobuf-dev grpc-proto libsodium-dev && \
     rm -fr /var/cache/apt/*
 
-COPY --from=build /usr/src/app/build/zkProver /usr/local/bin/zkProver
+COPY --from=build-gpu /usr/src/app/build/zkProver /usr/local/bin/zkProver
 
 ENTRYPOINT []
 
