--- a/Dockerfile-GPU
+++ b/Dockerfile-GPU
@@ -17,7 +17,7 @@ RUN make generate
 RUN make gpu -j
 
 
-FROM ubuntu:22.04 as executor
+FROM nvidia/cuda:12.5.0-runtime-ubuntu22.04 as executor
 
 WORKDIR /app
 COPY ./testvectors ./testvectors
@@ -38,6 +38,6 @@ RUN DEBIAN_FRONTEND=noninteractive apt update && \
     libgrpc++-dev libprotobuf-dev grpc-proto libsodium-dev && \
     rm -fr /var/cache/apt/*
 
-COPY --from=build /usr/src/app/build-gpu/zkProver /usr/local/bin/zkProver
+COPY --from=build /usr/src/app/build-gpu/zkProver /app/zkProver
 
 ENTRYPOINT []
