--- a/Dockerfile-GPU
+++ b/Dockerfile-GPU
@@ -1,14 +1,10 @@
-FROM ubuntu:22.04 as build
+FROM nvidia/cuda:12.4.1-devel-ubuntu22.04 as build
 
 RUN DEBIAN_FRONTEND=noninteractive apt-get update -y && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential libgmp-dev \
     libbenchmark-dev nasm nlohmann-json3-dev libsecp256k1-dev libomp-dev \
     libpqxx-dev git libssl-dev cmake libgrpc++-dev libprotobuf-dev grpc-proto \
     libsodium-dev protobuf-compiler protobuf-compiler-grpc uuid-dev wget && \
-    wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/cuda-keyring_1.1-1_all.deb && \
-    dpkg -i cuda-keyring_1.1-1_all.deb && \
-    apt-get update -y && \
-    apt-get -y install cuda-toolkit-12-3 && \
     rm -fr /var/cache/apt/*
 
 WORKDIR /usr/src/app
@@ -24,8 +20,6 @@ RUN make gpu -j
 FROM ubuntu:22.04 as executor
 
 WORKDIR /app
-COPY ./testvectors ./testvectors
-COPY ./config ./config
 COPY ./src/main_sm/fork_1/scripts/rom.json ./src/main_sm/fork_1/scripts/rom.json
 COPY ./src/main_sm/fork_2/scripts/rom.json ./src/main_sm/fork_2/scripts/rom.json
 COPY ./src/main_sm/fork_3/scripts/rom.json ./src/main_sm/fork_3/scripts/rom.json
@@ -42,6 +36,6 @@ RUN DEBIAN_FRONTEND=noninteractive apt update && \
     libgrpc++-dev libprotobuf-dev grpc-proto libsodium-dev && \
     rm -fr /var/cache/apt/*
 
-COPY --from=build /usr/src/app/build-gpu/zkProver /usr/local/bin/zkProver
+COPY --from=build /usr/src/app/build-gpu/zkProver /app/zkProver
 
 ENTRYPOINT []
