--- a/Dockerfile-GHA
+++ b/Dockerfile-GHA
@@ -1,10 +1,8 @@
-FROM ubuntu:22.04 as build
+FROM ubuntu:22.04
 
 RUN DEBIAN_FRONTEND=noninteractive apt-get update -y && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential libgmp-dev \
-    libbenchmark-dev nasm nlohmann-json3-dev libsecp256k1-dev libomp-dev \
-    libpqxx-dev git libssl-dev cmake libgrpc++-dev libprotobuf-dev grpc-proto \
-    libsodium-dev protobuf-compiler protobuf-compiler-grpc uuid-dev && \
+    nlohmann-json3-dev cmake libgrpc++-dev libprotobuf-dev uuid-dev pkg-config && \
     rm -fr /var/cache/apt/*
 
 WORKDIR /usr/src/app
@@ -13,31 +11,7 @@ COPY ./src ./src
 COPY ./test ./test
 COPY ./tools ./tools
 COPY Makefile .
-RUN make generate
-RUN make -j
 
-
-FROM ubuntu:22.04 as executor
-
-WORKDIR /app
-COPY ./testvectors ./testvectors
-COPY ./config ./config
-COPY ./src/main_sm/fork_1/scripts/rom.json ./src/main_sm/fork_1/scripts/rom.json
-COPY ./src/main_sm/fork_2/scripts/rom.json ./src/main_sm/fork_2/scripts/rom.json
-COPY ./src/main_sm/fork_3/scripts/rom.json ./src/main_sm/fork_3/scripts/rom.json
-COPY ./src/main_sm/fork_4/scripts/rom.json ./src/main_sm/fork_4/scripts/rom.json
-COPY ./src/main_sm/fork_5/scripts/rom.json ./src/main_sm/fork_5/scripts/rom.json
-COPY ./src/main_sm/fork_6/scripts/rom.json ./src/main_sm/fork_6/scripts/rom.json
-COPY ./src/main_sm/fork_7/scripts/rom.json ./src/main_sm/fork_7/scripts/rom.json
-COPY ./src/main_sm/fork_8/scripts/rom.json ./src/main_sm/fork_8/scripts/rom.json
-COPY ./src/main_sm/fork_9/scripts/rom.json ./src/main_sm/fork_9/scripts/rom.json
-
-RUN DEBIAN_FRONTEND=noninteractive apt update && \
-    DEBIAN_FRONTEND=noninteractive apt install -y libgmp-dev \
-    nlohmann-json3-dev libsecp256k1-dev libomp-dev libpqxx-dev libssl-dev \
-    libgrpc++-dev libprotobuf-dev grpc-proto libsodium-dev && \
-    rm -fr /var/cache/apt/*
-
-COPY --from=build /usr/src/app/build/zkProver /usr/local/bin/zkProver
+RUN make -j && mv ./build/zkProver /usr/local/bin/zkProver
 
 ENTRYPOINT []
