--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/goldilocks"]
 	path = src/goldilocks
-	url = https://github.com/okx/goldilocks.git
+	url = git@github.com:okx/goldilocks.git
