--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "src/goldilocks"]
 	path = src/goldilocks
-	url = https://github.com/0xPolygonHermez/goldilocks.git
-	branch = "develop"
+	url = https://github.com/okx/goldilocks.git
+	branch = develop-dumi-fork13
