--- a/testvectors/config_runFile_e2e.json
+++ b/testvectors/config_runFile_e2e.json
@@ -59,7 +59,8 @@
     "mapConstPolsFile": false,
     "mapConstantsTreeFile": false,
 
-    "inputFile": "testvectors/pay-batch-10.json",
+    "inputFile": "testvectors/batchProof/input_executor_3.json",
+    "inputFile2": "testvectors/batchProof/input_executor_1.json",
 
     "outputPath": "runtime/output",
     "configPath": "config",
